[gd_scene load_steps=28 format=3 uid="uid://bdtjxtyyetv2y"]

[ext_resource type="Script" uid="uid://dmhmq4v34a7ie" path="res://core/security_guard/security_guard.gd" id="1_p6iyn"]
[ext_resource type="Script" uid="uid://tdiec21ofqup" path="res://core/security_guard/guard_position.gd" id="2_ptygn"]
[ext_resource type="Texture2D" uid="uid://5jiaxq3f15qk" path="res://Flashlighty.png" id="3_e2b7p"]
[ext_resource type="Texture2D" uid="uid://ci171n26uc0iy" path="res://core/security_guard/Alert.png" id="5_o01ts"]
[ext_resource type="Texture2D" uid="uid://bbhfeba5dbtx5" path="res://core/security_guard/Guard.png" id="5_tcy2y"]
[ext_resource type="Texture2D" uid="uid://1i1ys0ei0c1p" path="res://core/security_guard/Alert2.png" id="6_c774s"]
[ext_resource type="Texture2D" uid="uid://i1l5pqf2jyvx" path="res://core/security_guard/TargetLost.png" id="7_vn1ve"]

[sub_resource type="Resource" id="Resource_ptygn"]
script = ExtResource("2_ptygn")
rotation = 1.5708
duration_min_sec = 3.0
duration_max_sec = 3.0
target_marker = Vector2(0, 0)
metadata/_custom_type_script = "uid://tdiec21ofqup"

[sub_resource type="Resource" id="Resource_p37y6"]
script = ExtResource("2_ptygn")
rotation = 3.14159
duration_min_sec = 3.0
duration_max_sec = 3.0
target_marker = Vector2(0, 0)
metadata/_custom_type_script = "uid://tdiec21ofqup"

[sub_resource type="Gradient" id="Gradient_p37y6"]
offsets = PackedFloat32Array(0, 0.681818)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_e2b7p"]
gradient = SubResource("Gradient_p37y6")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="AtlasTexture" id="AtlasTexture_cx8x8"]
atlas = ExtResource("5_tcy2y")
region = Rect2(0, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ylcyo"]
atlas = ExtResource("5_tcy2y")
region = Rect2(0, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_snib7"]
atlas = ExtResource("5_tcy2y")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_i8xhu"]
atlas = ExtResource("5_tcy2y")
region = Rect2(100, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_5qgeb"]
atlas = ExtResource("5_tcy2y")
region = Rect2(200, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ahe6"]
atlas = ExtResource("5_tcy2y")
region = Rect2(300, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_vuco0"]
atlas = ExtResource("5_tcy2y")
region = Rect2(100, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_8yhi0"]
atlas = ExtResource("5_tcy2y")
region = Rect2(200, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_lmkuu"]
atlas = ExtResource("5_tcy2y")
region = Rect2(300, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_o01ts"]
atlas = ExtResource("5_tcy2y")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_c774s"]
atlas = ExtResource("5_tcy2y")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_vn1ve"]
atlas = ExtResource("5_tcy2y")
region = Rect2(300, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_5vmxj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cx8x8")
}],
"loop": true,
"name": &"idle_down",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ylcyo")
}],
"loop": true,
"name": &"idle_side",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_snib7")
}],
"loop": true,
"name": &"idle_up",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i8xhu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5qgeb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ahe6")
}],
"loop": true,
"name": &"run_down",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vuco0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8yhi0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lmkuu")
}],
"loop": true,
"name": &"run_right",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o01ts")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c774s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vn1ve")
}],
"loop": true,
"name": &"run_up",
"speed": 6.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_ylcyo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_o01ts")
}],
"loop": true,
"name": &"alarmd",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_c774s")
}],
"loop": true,
"name": &"chasing",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_vn1ve")
}],
"loop": true,
"name": &"confused",
"speed": 1.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_p37y6"]
radius = 25.0

[sub_resource type="CircleShape2D" id="CircleShape2D_e2b7p"]
radius = 68.0074

[node name="SecurityGuard" type="CharacterBody2D" groups=["Guard"]]
collision_layer = 8
floor_stop_on_slope = false
floor_max_angle = 3.14159
script = ExtResource("1_p6iyn")
rotaton_speed = 1.0
move_speed = 300.0
guard_position_index = 1
guard_positions = Array[ExtResource("2_ptygn")]([SubResource("Resource_ptygn"), SubResource("Resource_p37y6")])

[node name="positionTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="trackingTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="lostRotationTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="updateNav" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_enabled = true

[node name="GuardArea2D" type="Area2D" parent="."]
rotation = 3.14159
collision_layer = 0
collision_mask = 2

[node name="GuardCollision" type="CollisionPolygon2D" parent="GuardArea2D"]
unique_name_in_owner = true
rotation = -0.0707134
polygon = PackedVector2Array(0, -8, 242.414, -82.2885, 247.277, -66.2577, 251.081, -49.9431, 253.81, -33.4147, 255.452, -16.7432, 256, -2.13163e-14, 255.452, 16.7432, 253.81, 33.4147, 251.081, 49.9431, 247.277, 66.2577, 242.414, 82.2885, 236.513, 97.967, 229.599, 113.226, 0, 8)

[node name="GuardFov" type="Polygon2D" parent="GuardArea2D" groups=["masked_by_player_vision"]]
unique_name_in_owner = true
rotation = -0.0730822
color = Color(1, 1, 0, 0.235294)
polygon = PackedVector2Array(0, -8, 242.414, -82.2885, 247.277, -66.2577, 251.081, -49.9431, 253.81, -33.4147, 255.452, -16.7432, 256, -2.13163e-14, 255.452, 16.7432, 253.81, 33.4147, 251.081, 49.9431, 247.277, 66.2577, 242.414, 82.2885, 236.513, 97.967, 229.599, 113.226, 0, 8)

[node name="PointLight2D" type="PointLight2D" parent="GuardArea2D" groups=["masked_by_player_vision"]]
visible = false
position = Vector2(-1.99999, 2.00001)
scale = Vector2(2.5, 2.5)
color = Color(1, 1, 0, 1)
shadow_enabled = true
texture = SubResource("GradientTexture2D_e2b7p")

[node name="PointLight2D" type="PointLight2D" parent="GuardArea2D/PointLight2D" groups=["masked_by_player_vision"]]
visible = false
z_index = 1
scale = Vector2(0.55, 0.6)
color = Color(1, 1, 0.482353, 1)
energy = 0.5
shadow_enabled = true
texture = ExtResource("3_e2b7p")
offset = Vector2(105, 0)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." groups=["masked_by_player_vision"]]
position = Vector2(-4, 0)
sprite_frames = SubResource("SpriteFrames_5vmxj")
animation = &"idle_down"
autoplay = "idle_down"

[node name="SignAnimatedSprite2D" type="AnimatedSprite2D" parent="." groups=["masked_by_player_vision"]]
visible = false
position = Vector2(45, -70)
sprite_frames = SubResource("SpriteFrames_ylcyo")
animation = &"alarmd"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_p37y6")

[node name="WallRayCast2D" type="RayCast2D" parent="."]
enabled = false
target_position = Vector2(236.513, 97.967)
collision_mask = 3

[node name="CaughtArea" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="CaughtArea"]
shape = SubResource("CircleShape2D_e2b7p")
debug_color = Color(0.7, 0.123896, 0, 0.42)

[connection signal="timeout" from="positionTimer" to="." method="_on_position_timer_timeout"]
[connection signal="timeout" from="trackingTimer" to="." method="_on_tracking_timer_timeout"]
[connection signal="timeout" from="lostRotationTimer" to="." method="_on_lost_rotation_timer_timeout"]
[connection signal="timeout" from="updateNav" to="." method="_on_update_nav_timeout"]
[connection signal="body_entered" from="CaughtArea" to="." method="_on_caught_area_body_entered"]
